--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@playerdata/react-native-mcu-manager",
+  "name": "@playpicoo/react-native-mcu-manager",
   "title": "React Native MCU Manager",
-  "version": "0.0.1-development",
+  "version": "1.0.0",
   "description": "React Native Wrappers for MCUMgr's Android / iOS client libraries",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -34,16 +34,16 @@
     "android",
     "mcumgr"
   ],
-  "repository": "https://github.com/PlayerData/react-native-mcu-manager.git",
-  "author": "PlayerData <dev@playerdata.co.uk> (https://github.com/PlayerData)",
+  "repository": "https://github.com/playpicoo/react-native-mcu-manager.git",
+  "author": "PlayerData <dev@playerdata.co.uk> (https://github.com/playpicoo)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/PlayerData/react-native-mcu-manager/issues"
+    "url": "https://github.com/playpicoo/react-native-mcu-manager/issues"
   },
-  "homepage": "https://github.com/PlayerData/react-native-mcu-manager#readme",
+  "homepage": "https://github.com/playpicoo/react-native-mcu-manager#readme",
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://npm.pkg.github.com/"
   },
   "dependencies": {
     "uuid": "^8.3.2"
