--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@playpicoo/react-native-mcu-manager",
   "title": "React Native MCU Manager",
-  "version": "2.1.0-alpha.4",
+  "version": "2.1.0-beta.1",
   "description": "React Native Wrappers for MCUMgr's Android / iOS client libraries",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
