--- a/example/package.json
+++ b/example/package.json
@@ -25,5 +25,6 @@
     "metro-react-native-babel-preset": "^0.70.2",
     "pod-install": "^0.1.35",
     "typescript": "^4.6.4"
-  }
+  },
+  "packageManager": "yarn@4.0.2"
 }
