file upload change; using FileUploader, added bytes sent in progress update and NO_ENTRY exception now transformed to return value of -1

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -126,5 +126,6 @@ dependencies {
   api 'com.facebook.react:react-native:+'
 
   implementation 'no.nordicsemi.android:mcumgr-ble:1.6.0'
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
