--- a/example/package.json
+++ b/example/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "metro-react-native-babel-preset": "^0.70.2",
     "pod-install": "^0.1.35",
+    "react-native-performance": "^5.1.2",
     "typescript": "^4.6.4"
   },
   "packageManager": "yarn@4.0.2"
