--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -231,6 +231,7 @@ android {
             keyPassword 'android'
         }
     }
+    namespace 'com.example.reactnativemcumanager'
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
